# RegionCLIP

./: .gitignore  extract_region_features.sh  extract_region_features_f30k.sh  extract_region_features_jcre3.sh  pyproject.toml  setup.md
detectron2/utils/: logger.py
tools/: extract_region_features.py  run_video.py
tools/utils/: util.py
