[tool.poetry]
name = "RegionCLIP"
version = "0.1.0"
description = ""
authors = ["SInadumi <inazumi19@icloud.com>"]
readme = "README.md"
package-mode = true
packages = [
    { "include" = "detectron2" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

torch = [
    { platform = "darwin", version = "1.9.0", source = "PyPI" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp39-cp39-linux_x86_64.whl" },
]
torchvision =[
    { platform = "darwin", version = "0.10.0" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu111/torchvision-0.10.0%2Bcu111-cp39-cp39-linux_x86_64.whl"},
]
opencv-python = "^4.9.0.80"
timm = "0.5.4"
ftfy = "^6.2.0"
scikit-learn = "^1.4.2"
lvis = "^0.5.3"
setuptools = "^59.0.1"  # setuptools downgrade, c.f. https://github.com/microsoft/RegionCLIP/issues/60
omegaconf = "^2.3.0"
diffdist = "^0.1"
h5py = "^3.11.0"
pillow = "<10.0.0"
termcolor = "^2.4.0"
yacs = "^0.1.8"
tabulate = "^0.9.0"
cloudpickle = "^3.0.0"
matplotlib = "^3.9.0"
tqdm = "^4.66.4"
tensorboard = "^2.17.0"
pycocotools = "^2.0.8"
future = "^1.0.0"
pydot = "^2.0.0"
hydra-core = "^1.3.2"
fvcore = ">=0.1.5,<0.1.6"
iopath = ">=0.1.7,<0.1.9"
black = "^21.4b2"
shapely = "^2.0.4"
pygments = ">=2.2"
psutil = "^6.0.0"
panopticapi = {url = "https://github.com/cocodataset/panopticapi/archive/master.zip"}
numpy = "^1.24.4"
regex = "^2024.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
